fixed many bugs

--- a/_posts/2017-03-02-rRtD.html
+++ b/_posts/2017-03-02-rRtD.html
@@ -1,15 +1,16 @@
---- 
-title: "آیا ما انسانیم؟ نکاتی در باستان‌شناسی طراحی| بئاتریس کولومینا و مارک ویگلی" 
-authors: asmaneh 
-types: bap 
-categories: book 
-featureImg: "/assets/img/posts/rRtD.jpg" 
-slug: rRtD 
-gallery: 
-- image_path: "/assets/img/posts/rRtD.jpg" 
-  title: "آیا ما انسانیم؟ نکاتی در باستان‌شناسی طراحی| بئاتریس کولومینا و مارک ویگلی" 
- 
---- 
+---
+title: "آیا ما انسانیم؟ نکاتی در باستان‌شناسی طراحی| بئاتریس کولومینا و مارک ویگلی"
+authors: asmaneh
+types: bap
+tags: بیت عتیق,بیت عتیق 
+categories: book
+featureImg: "/assets/img/posts/rRtD.jpg"
+slug: rRtD
+gallery:
+- image_path: "/assets/img/posts/rRtD.jpg"
+  title: "آیا ما انسانیم؟ نکاتی در باستان‌شناسی طراحی| بئاتریس کولومینا و مارک ویگلی"
+
+---
 Are We Human? Notes on an Archaeology of Design
  (Beatriz Colomina (Author), Mark Wigley (Author
 (Lars Müller (January 2017
