--- a/_posts/2020-06-18-aznz.html
+++ b/_posts/2020-06-18-aznz.html
@@ -1,47 +1,47 @@
---- 
-title: "غَرْقْ در «غرق»: محققان فرنگی و تبعات و ریشه‌های یک اشتباه" 
-authors: soltani 
-types: blog 
+---
+title: "غَرْقْ در «غرق»: محققان فرنگی و تبعات و ریشه‌های یک اشتباه"
+authors: soltani
+types: blog
 featured: false
-featureImg: "/assets/img/posts/aznz.jfif" 
-slug: aznz 
-gallery: 
-- image_path: "/assets/img/posts/aznz.jfif" 
-  title: "غَرْقْ در «غرق»: محققان فرنگی و تبعات و ریشه‌های یک اشتباه" 
-- image_path: "/assets/img/posts/aznz-1.jfif" 
-  title: "تصویر ۱: صفحۀ نخست ارشادالزراعۀ کتابخانۀ مجلس به شمارۀ ۵۴۵۶" 
-- image_path: "/assets/img/posts/aznz-2.jfif" 
-  title: "تصویر۲: صفحۀ نخست ارشادالزراعۀ طبعِ عبدالغفار نجم‌الدوله" 
-- image_path: "/assets/img/posts/aznz-3.jfif" 
-  title: "تصویر ۳: پلانِ ترسیمیِ پوگاچنکووا: Пугаченкова, “Садово-парковое искусство Средней Азии в эпоху Тимура и Тимуридов”, стр. 153" 
-- image_path: "/assets/img/posts/aznz-4.jfif" 
-  title: "تصویر ۴: پلانِ ترسیمیِ پیندر ویلسن: Pinder Wilson, “The Persian Garden: Bagh and Chahar Bagh”, figure 8, p. XIII" 
-- image_path: "/assets/img/posts/aznz-5.jfif" 
-  title: "تصویر ۵: پلانِ ترسیمیِ پوگاچنکووا: Pugachenkova, Chefs-d’œuvre d’architecture de l’Asie centrale, XIVe-XVe siècle, p. 55" 
-- image_path: "/assets/img/posts/aznz-6.jfif" 
-  title: "تصویر ۶: پلانِ ترسیمیِ مهوش عالمی: Alemi, Mahvash. "Chahar Bagh”, p 44" 
-- image_path: "/assets/img/posts/aznz-7.jfif" 
-  title: "تصویر ۷: پلانِ ترسیمیِ سابتلنی: Subtelny, "Agriculture and the Timerud Chahargagh: The Evidence from a Medieval Persian Agricultural Manual”, p. 127" 
-- image_path: "/assets/img/posts/aznz-8.jfif" 
-  title: "تصویر ۸: مقاطعِ ترسیمیِ سابتلنی: Subtelny, "Agriculture and the Timerud Chahargagh: The Evidence from a Medieval Persian Agricultural Manual”, p. 127" 
-- image_path: "/assets/img/posts/aznz-9.jfif" 
-  title: "تصویر ۹: پلانِ ترسیمیِ دَمگو: Damgaard, “The Paradisical Garden; Tracing the Timurid Chahar Bagh”, p. 36" 
-- image_path: "/assets/img/posts/aznz-10.jfif" 
-  title: "تصویر ۱۰: روضۀ هشتم ارشادالزراعه در نسخۀ کتابخانۀ مجلس (۱)" 
-- image_path: "/assets/img/posts/aznz-11.jfif" 
-  title: "تصویر ۱۱: روضۀ هشتم ارشادالزراعه در نسخۀ کتابخانۀ مجلس (۲)" 
-- image_path: "/assets/img/posts/aznz-12.jfif" 
-  title: "تصویر ۱۲: روضۀ هشتم ارشادالزراعه در نسخۀ کتابخانۀ مجلس (۳)" 
-- image_path: "/assets/img/posts/aznz-13.jfif" 
-  title: "تصویر ۱۳: روضۀ هشتم ارشادالزراعه در طبعِ مشیری (۱)" 
-- image_path: "/assets/img/posts/aznz-14.jfif" 
-  title: "تصویر ۱۴: روضۀ هشتم ارشادالزراعه در طبعِ مشیری (۲)" 
-- image_path: "/assets/img/posts/aznz-15.jfif" 
-  title: "تصویر ۱۵: روضۀ هشتم ارشادالزراعه در طبعِ مشیری (۳)" 
-- image_path: "/assets/img/posts/aznz-16.jfif" 
-  title: "تصویر ۱۶: جدول مقایسۀ نسخۀ کتابخانۀ مجلس و طبع مشیری در بخش‌هایی از روضۀ هشتم" 
- 
---- 
+featureImg: "/assets/img/posts/aznz.jfif"
+slug: aznz
+gallery:
+- image_path: "/assets/img/posts/aznz.jfif"
+  title: "غَرْقْ در «غرق»: محققان فرنگی و تبعات و ریشه‌های یک اشتباه"
+- image_path: "/assets/img/posts/aznz-1.jfif"
+  title: "تصویر ۱: صفحۀ نخست ارشادالزراعۀ کتابخانۀ مجلس به شمارۀ ۵۴۵۶"
+- image_path: "/assets/img/posts/aznz-2.jfif"
+  title: "تصویر۲: صفحۀ نخست ارشادالزراعۀ طبعِ عبدالغفار نجم‌الدوله"
+- image_path: "/assets/img/posts/aznz-3.jfif"
+  title: "تصویر ۳: پلانِ ترسیمیِ پوگاچنکووا: Пугаченкова, “Садово-парковое искусство Средней Азии в эпоху Тимура и Тимуридов”, стр. 153"
+- image_path: "/assets/img/posts/aznz-4.jfif"
+  title: "تصویر ۴: پلانِ ترسیمیِ پیندر ویلسن: Pinder Wilson, “The Persian Garden: Bagh and Chahar Bagh”, figure 8, p. XIII"
+- image_path: "/assets/img/posts/aznz-5.jfif"
+  title: "تصویر ۵: پلانِ ترسیمیِ پوگاچنکووا: Pugachenkova, Chefs-d’œuvre d’architecture de l’Asie centrale, XIVe-XVe siècle, p. 55"
+- image_path: "/assets/img/posts/aznz-6.jfif"
+  title: "تصویر ۶: پلانِ ترسیمیِ مهوش عالمی: Alemi, Mahvash. Chahar Bagh, p 44"
+- image_path: "/assets/img/posts/aznz-7.jfif"
+  title: "تصویر ۷: پلانِ ترسیمیِ سابتلنی: Subtelny, Agriculture and the Timerud Chahargagh: The Evidence from a Medieval Persian Agricultural Manual, p. 127"
+- image_path: "/assets/img/posts/aznz-8.jfif"
+  title: "تصویر ۸: مقاطعِ ترسیمیِ سابتلنی: Subtelny, Agriculture and the Timerud Chahargagh: The Evidence from a Medieval Persian Agricultural Manual”, p. 127"
+- image_path: "/assets/img/posts/aznz-9.jfif"
+  title: "تصویر ۹: پلانِ ترسیمیِ دَمگو: Damgaard, “The Paradisical Garden; Tracing the Timurid Chahar Bagh”, p. 36"
+- image_path: "/assets/img/posts/aznz-10.jfif"
+  title: "تصویر ۱۰: روضۀ هشتم ارشادالزراعه در نسخۀ کتابخانۀ مجلس (۱)"
+- image_path: "/assets/img/posts/aznz-11.jfif"
+  title: "تصویر ۱۱: روضۀ هشتم ارشادالزراعه در نسخۀ کتابخانۀ مجلس (۲)"
+- image_path: "/assets/img/posts/aznz-12.jfif"
+  title: "تصویر ۱۲: روضۀ هشتم ارشادالزراعه در نسخۀ کتابخانۀ مجلس (۳)"
+- image_path: "/assets/img/posts/aznz-13.jfif"
+  title: "تصویر ۱۳: روضۀ هشتم ارشادالزراعه در طبعِ مشیری (۱)"
+- image_path: "/assets/img/posts/aznz-14.jfif"
+  title: "تصویر ۱۴: روضۀ هشتم ارشادالزراعه در طبعِ مشیری (۲)"
+- image_path: "/assets/img/posts/aznz-15.jfif"
+  title: "تصویر ۱۵: روضۀ هشتم ارشادالزراعه در طبعِ مشیری (۳)"
+- image_path: "/assets/img/posts/aznz-16.jfif"
+  title: "تصویر ۱۶: جدول مقایسۀ نسخۀ کتابخانۀ مجلس و طبع مشیری در بخش‌هایی از روضۀ هشتم"
+
+---
 <p style="text-align: justify;">در منابع مکتوب تاریخ معماری ایران به&zwnj;ندرت نوشته&zwnj;ای یافت می&zwnj;شود که حاوی اطلاعاتِ مستقیمی دربارۀ طراحیِ معماری باشد. قِلّت این نوع نوشته&zwnj;ها اهمیت درک درست و تفسیر به&zwnj;جای همین مواردِ معدود را نشان می&zwnj;دهد. یکی از این مواردِ معدود فصلی است از کتاب&nbsp;ارشادالزراعه&nbsp;تألیف سال ۹۲۱ ه.ق در هرات با عنوان &laquo;در بیان نهال اشجار و گل و ریاحین به سیاق باغبانی در چهارباغ کاشتن و در برابر یکدیگر&raquo; و عنوانِ فرعیِ حیرت انگیزِ &laquo;طرح چهارباغ و عمارت&raquo; که نشان از نوشته&zwnj;ای نادر در مجموعۀ منابع مکتوب تاریخ معماری ایران می&zwnj;دهد. نوشته به گونه&zwnj;ای است که از طریق آن می&zwnj;توان به دقتِ نسبتاً بالایی پلان و مقطع باغی از پایان دورۀ تیموریان و آغاز حکومت صفویان را ترسیم کرد و همۀ عناصر باغ را در آن چید و به همۀ جزئیات باغ و اندازه&zwnj;ها از حصار و راه&zwnj;ها و جوی&zwnj;ها و حوض و عمارت تا انواع گیاهان و درختان و ترتیب کاشت آنها واقف شد. کور از خدا چه می&zwnj;خواهد جز دو چشم بینا؟! همه چیز فراهم است تا از طریق این متن بتوان دست&zwnj;کم یک بار هم که شده چیزی را از روی یک نوشتۀ کهن دربارۀ تاریخ معماری ایران ترسیم کرد.</p>
 <p style="text-align: justify;">تا جایی که من می&zwnj;دانم به سیاق بیشتر تحقیقات حوزۀ فرهنگ و معماری و هنر ایران اولین کسانی که به سراغ این متن رفته&zwnj;اند محققان فرنگی یا ایرانیان تحصیل&zwnj;کرده در فرنگ بودند و سعی کرده&zwnj;اند زیر و بم این نوشته را در بیاورند و از طریق متن و نویسنده&zwnj; و استادِ نویسنده و دورۀ تاریخی و محلِ نوشتنِ کتاب و ارتباط آن با حوزه&zwnj;های فرهنگی دیگر از قبیل هند و ورارود دادِ سخن دهند و بیشترین بهره&zwnj;ها را از این جواهر کم&zwnj;یاب ببرند. دستشان درد نکند. چون در همین حین دانشگاه و فضای علمی در ایران بسیاری از محققان را وادار به کارهای مهم&zwnj;تر و بنیادی&zwnj;تر و تخیلات ماورایی و بازی با کلمات و لفاظی و امور مهمی&zwnj; نظیر کتاب&zwnj;سازی و مقاله&zwnj;سازی می&zwnj;کند و ایشان نیز مجبورند برای راضی کردن خود و تئوریزه کردن کارهایشان به اعتبار جملۀ شریفۀ &laquo;دفتر صوفی سواد و حرف نیست&raquo; در مدرسه کارِ خانقاه کنند و علمِ پوزتیو را به عهدۀ &laquo;تونچیِ حمام&raquo;۲&nbsp;که همان محققان فرنگی باشند &zwnj;بگذارند تا بتوانند در قلمرو &laquo;نادانیِ&raquo; محصولِ دانشگاه و فضای علمی، به زندگی ادامه دهند &zwnj;یا در بهترین حالت اگر دانشگاه مجالی بگذارد شارح و تکرار کنندۀ حرف&zwnj;های فرنگی&zwnj;ها در مقالات و کتاب و کلاس&zwnj;های خودشان باشند و متأسفانه نادرند کسانی که از این عرصه جسته&zwnj;اند؛ اما هنوز کسانی هستند.</p>
 <p style="text-align: justify;">ارشادالزراعه&nbsp;نوشتۀ قاسم بن یوسف ابونصری هروی یکی از کتاب&zwnj;های مهم در علم فلاحت است که در هشت روضه تنظیم شده است و روضۀ هشتم و آخر همانی است که دربارۀ طرح چهارباغ است. در دوران جدید نخسین آگاهی&zwnj;ها از وجود این کتاب مربوط به عبدالغفار نجم&zwnj;الدوله است که آن را در سال ۱۳۲۲ ق در مجموعه&zwnj;ای شامل چند کتاب در علم فلاحت با چاپِ سنگی و سربی منتشر کرد (تصویر ۲) البته در هفت روضه و روضۀ هشتم که مد نظر ماست در این چاپ نیامده است.۳&nbsp;پس از آن مرحوم ایرج افشار در سال ۱۳۴۳ در معرفی تألیفات دیگری از صاحب&nbsp;ارشادالزراعه&nbsp;به نسخۀ کاملی از&nbsp;ارشادالزراعه&nbsp;اشاره کرد۴&nbsp;که تحریرش ۹۲۷ ق است و به تاریخ تألیف کتاب بسیار نزدیک است و در هشت روضه است و علاوه بر آن چند رسالۀ دیگر را بر دارد و متعلق به کتابخانۀ مجلس است.۵&nbsp;پس از آن در سال ۱۳۴۶ اولین بار نسخۀ چاپی کامل کتاب با تصحیح محمد مشیری چاپ شد که کامل است و در هشت روضه است و اولین و آخرین چاپ منقح کتاب است۶&nbsp;و منبع تقریباً همۀ تألیفات محققان فرنگی.</p>
