--- a/_posts/2018-08-01-V2w5.html
+++ b/_posts/2018-08-01-V2w5.html
@@ -1,15 +1,4 @@
 --- 
-title: "تست پانویس" 
-authors: asmaneh 
-types: blog 
-featured: false
-slug: V2w5 
-footnotes: 
-- number: "1" 
-  content: "پانویس" 
-- number: "2" 
-  content: "test" 
- 
+published: false 
 --- 
-<p>تست <span id="#wk_ft1" class="fnoteWrap" contenteditable="false"><button class="fnoteBtn" type="button" data-content="%D9%BE%D8%A7%D9%86%D9%88%DB%8C%D8%B3">1</button></span></p>
-<p>footnote <span id="#wk_ft2" class="fnoteWrap" contenteditable="false"><button class="fnoteBtn" type="button" data-content="test">2</button></span></p>
+  
