--- a/_posts/2018-02-06-bNhT.html
+++ b/_posts/2018-02-06-bNhT.html
@@ -1,8 +1,4 @@
 --- 
-title: "تست پانویس ۵" 
-authors: asmaneh 
-types:  
-featured: false
-slug: bNhT 
+published: false 
 --- 
-<p>تست <span id="#wk_ft1" class="fnoteWrap" contenteditable="false"><button class="fnoteBtn" type="button" data-content="%D9%BE%D8%A7%D9%86%D9%88%DB%8C%D8%B3%0A">1</button></span></p>
+  
