--- a/_posts/2017-08-01-ApaD.html
+++ b/_posts/2017-08-01-ApaD.html
@@ -1,9 +1,4 @@
 --- 
-title: "تست پانویس ۲" 
-authors: asmaneh 
-types: blog 
-featured: false
-slug: ApaD 
+published: false 
 --- 
-<p>تست <span id="#wk_ft1" class="fnoteWrap" contenteditable="false"><button class="fnoteBtn" type="button" data-content="%D9%BE%D8%A7%D9%86%D9%88%DB%8C%D8%B3">1</button></span></p>
-<p>پانویس<span id="#wk_ft2" class="fnoteWrap" contenteditable="false"><button class="fnoteBtn" type="button" data-content="%D8%AA%D8%B3%D8%AA">2</button></span></p>
+  
