--- a/_posts/2019-03-02-GvTE.html
+++ b/_posts/2019-03-02-GvTE.html
@@ -2,6 +2,7 @@
 title: "۱۸۹. «تأثیر ادبیات حماسی فارسی بر نگارگری ایرانی».حسین عصمتی. در گلستان هنر، ش ۱۵ (بهار ۱۳۸۸)، ص۱۰۷- ۱۱۴." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/GvTE.pdf" 
 slug: GvTE 
