--- a/_posts/2018-10-13-H8NF.html
+++ b/_posts/2018-10-13-H8NF.html
@@ -2,6 +2,7 @@
 title: "۱۷۱. «یافته‌های تازه در میدان عتیق اصفهان». محسن جاوری. در گلستان هنر، ش ۱۴ (زمستان ۱۳۸۷)، ص۳۵- ۳۹." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/H8NF.pdf" 
 slug: H8NF 
