--- a/_posts/2019-02-24-ushr.html
+++ b/_posts/2019-02-24-ushr.html
@@ -2,6 +2,7 @@
 title: "۱۸۸. «نورعلی برومند، گنجینهٔ موسیقی ایرانی، به روایت اسناد».علیرضا اسماعیلی. در گلستان هنر، ش ۱۵ (بهار ۱۳۸۸)، ص۹۷- ۱۰۶." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/ushr.pdf" 
 slug: ushr 
