--- a/_posts/2019-02-07-wwa5.html
+++ b/_posts/2019-02-07-wwa5.html
@@ -2,6 +2,7 @@
 title: "۱۸۷. «بچه‌خوانی، نخستین کتاب‌های مصور کودک و فرهنگ عامه در ایران». عباس حسینی. در گلستان هنر، ش ۱۵ (بهار ۱۳۸۸)، ص۸۷- ۹۵." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/wwa5.pdf" 
 slug: wwa5 
