--- a/_posts/2019-01-07-XGgi.html
+++ b/_posts/2019-01-07-XGgi.html
@@ -2,6 +2,7 @@
 title: "۱۸۶. «کاشی‌کاران گم‌نام دورهٔ قاجاریه (۲)، خاندان خاک‌نگار مقدم». مهدی مکی‌نژاد. در گلستان هنر، ش ۱۵ (بهار ۱۳۸۸)، ص۸۰- ۸۶." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/XGgi.pdf" 
 slug: XGgi 
