--- a/_posts/2021-07-12-gqTz.html
+++ b/_posts/2021-07-12-gqTz.html
@@ -1,20 +1,20 @@
---- 
-title: "نهیب؛ مطالعات میان‌رشته‌ای هنر| شمارۀ پنجم: نسبت هنر و اشیا| بهار ۱۴۰۰" 
-authors: asmaneh 
-types: bap 
-categories: periodical 
-tags: مطالعات میان‌رشته‌ای هنر,نهیب,هنر و نظریه,هنر و اشیا 
+---
+title: "نهیب؛ مطالعات میان‌رشته‌ای هنر| شمارۀ پنجم: نسبت هنر و اشیا| بهار ۱۴۰۰"
+authors: asmaneh
+types: bap
+categories: periodical
+tags: مطالعات میان‌رشته‌ای هنر,نهیب,هنر و نظریه,هنر و اشیا
 featured: false
-featureImg: "/assets/img/posts/gqTz.jpg" 
-slug: gqTz 
-gallery: 
-- image_path: "/assets/img/posts/gqTz.jpg" 
-  title: "نهیب؛ مطالعات میان‌رشته‌ای هنر| شمارۀ پنجم: نسبت هنر و اشیا| بهار ۱۴۰۰" 
- 
---- 
+featureImg: "/assets/img/posts/gqTz.jpg"
+slug: gqTz
+gallery:
+- image_path: "/assets/img/posts/gqTz.jpg"
+  title: "نهیب؛ مطالعات میان‌رشته‌ای هنر| شمارۀ پنجم: نسبت هنر و اشیا| بهار ۱۴۰۰"
+
+---
 <p>شمارۀ پنجم نشریۀ نهیب منتشر شد. در معرفی اهداف این نشریه آمده است یکی از کمبودها در خانواده&zwnj;ی کم جمعیتِ هنرهایِ تجسمی ایران دور شدن از مباحث نظریِ پایه است. بر این اساس در این نشریه در هر فصل با انتخاب موضوعی ویژه که در امتداد با موضوعات پیشین و پسین باشند، با تکیه بر دیدگاهِ اندیشمندانِ مرتبط با مباحث نظری هنر، رسانه&zwnj;های مختلف و تکنولوژی روز، امکان دسترسی اهل این حوزه به نوشته&zwnj;ها و دیدگاه&zwnj;ها در زمینه&zwnj;های نقد و تجزیه و تحلیل هنرهای تجسمی و مطالعات میان&zwnj;رشته&zwnj;ای هنر فراهم می&zwnj;شود.&nbsp;</p>
 <p>&nbsp;</p>
-<p><span style="background-color: #ffffff; color: #4d5156; font-family: arial, sans-serif; font-size: 14px; text-align: left;">&ndash; </span>فهرست مطالب این شماره:</p>
+<p>فهرست مطالب این شماره:</p>
 <p>- هُنرِ خلقِ &laquo;چیز&raquo;| سیاوش لطفی</p>
 <p>- اشیاء کارشان باید اشاره باشد، نه سوق و راندن!| محمود حسینی&zwnj;زاد</p>
 <p>- ایستادن در برهوت| پیام لاریان</p>
@@ -42,5 +42,5 @@ gallery:
 <p>- نگاهی به نقش سازها&nbsp; به عنوان اشیاء در موسیقی| حامد گرجی</p>
 <p>- کتاب تصویری و شیء هنری| مسعود مجاوری آگاه</p>
 <p>&nbsp;</p>
-<p><span style="background-color: #ffffff; color: #4d5156; font-family: arial, sans-serif; font-size: 14px; text-align: left;">&ndash; </span>اطلاعات بیشتر و دریافت مجله:</p>
+<p>اطلاعات بیشتر و دریافت مجله:</p>
 <p dir="ltr" style="text-align: left;"><a href="http://nahibmag.ir/1400/04/07/%D8%B4%D9%85%D8%A7%D8%B1%D9%87-%DB%8C-%D9%BE%D9%86%D8%AC%D9%85/">http://nahibmag.ir/1400/04/07/%D8%B4%D9%85%D8%A7%D8%B1%D9%87-%DB%8C-%D9%BE%D9%86%D8%AC%D9%85/</a></p>
