--- a/_posts/2018-12-29-yU3n.html
+++ b/_posts/2018-12-29-yU3n.html
@@ -2,6 +2,7 @@
 title: "۱۸۵. «مُقام و مصداق‌های آن در سفرنامهٔ ناصر خسرو». فاطمه گلدار. در گلستان هنر، ش ۱۵ (بهار ۱۳۸۸)، ص۷۱- ۷۹." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/yU3n.pdf" 
 slug: yU3n 
