--- a/_posts/2018-12-25-6DXH.html
+++ b/_posts/2018-12-25-6DXH.html
@@ -2,6 +2,7 @@
 title: "۱۸۴. «معماری حمام در متون طب کهن و مقدمهٔ رسالهٔ دلاکیه». سیدحسین رضوی برقعی. در گلستان هنر، ش ۱۵ (بهار ۱۳۸۸)، ص۶۴- ۷۰." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/6DXH.pdf" 
 slug: 6DXH 
