--- a/_posts/2018-12-22-kNDa.html
+++ b/_posts/2018-12-22-kNDa.html
@@ -2,6 +2,7 @@
 title: "۱۸۳. «معمار دورهٔ گذار، نگاهی به خاطرات ممتحن‌الدوله». محمدمهدی عبدالله‌زاده. در گلستان هنر، ش ۱۵ (بهار ۱۳۸۸)، ص۵۳- ۶۳." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/kNDa.pdf" 
 slug: kNDa 
