--- a/_posts/2018-12-17-7fZ9.html
+++ b/_posts/2018-12-17-7fZ9.html
@@ -2,6 +2,7 @@
 title: "۱۸۲. «معرفی و تحلیل نخستین نقشهٔ مسطحهٔ شهر تهران». فرهاد تهرانی، شیما بکاء. در گلستان هنر، ش ۱۵ (بهار ۱۳۸۸)، ص۴۵- ۵۲." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/7fZ9.pdf" 
 slug: 7fZ9 
