--- a/_posts/2018-12-09-zjT7.html
+++ b/_posts/2018-12-09-zjT7.html
@@ -2,6 +2,7 @@
 title: "۱۸۱. «کتابچهٔ برآورد مخارج راه‌سازی مازندران از حسین‌قلی قاجار مهندس». عمادالدین شیخ‌الحکمایی، محمودرضا جعفریان. در گلستان هنر، ش ۱۵ (بهار ۱۳۸۸)، ص۳۶- ۴۴." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/zjT7.pdf" 
 slug: zjT7 
