--- a/_posts/2018-12-04-wg2e.html
+++ b/_posts/2018-12-04-wg2e.html
@@ -2,6 +2,7 @@
 title: "۱۸۰. «کتاب عکس علی‌خان والی». فرهاد نظری. در گلستان هنر، ش ۱۵ (بهار ۱۳۸۸)، ص۲۱- ۳۵." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/wg2e.pdf" 
 slug: wg2e 
