--- a/_posts/2018-12-02-6srF.html
+++ b/_posts/2018-12-02-6srF.html
@@ -2,6 +2,7 @@
 title: "۱۷۹. سخنی در منابع مکتوب تاریخ معماری ایران و شیوهٔ جستجو در آنها». مهرداد قیومی بیدهندی. در گلستان هنر، ش ۱۵ (بهار ۱۳۸۸)، ص۵- ۲۰." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/6srF.pdf" 
 slug: 6srF 
