--- a/_posts/2018-11-20-JSSA.html
+++ b/_posts/2018-11-20-JSSA.html
@@ -2,6 +2,7 @@
 title: "۱۷۸. بررسی کتاب: تاریخچهٔ تقویمی هنر و معماری اسلامی». هاشم بناپور. در گلستان هنر، ش ۱۴ (زمستان ۱۳۸۷)، ص۱۱۹- ۱۲۶." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/JSSA.pdf" 
 slug: JSSA 
