--- a/_posts/2018-11-12-csNz.html
+++ b/_posts/2018-11-12-csNz.html
@@ -2,6 +2,7 @@
 title: "۱۷۷. «عوامل جغرافیایی در هنر ایرانی». ولادیمیر مینورسکی. ترجمهٔ داود طبایی. در گلستان هنر، ش ۱۴ (زمستان ۱۳۸۷)، ص۹۹- ۱۱۸." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/csNz.pdf" 
 slug: csNz 
