--- a/_posts/2018-11-04-gTu7.html
+++ b/_posts/2018-11-04-gTu7.html
@@ -2,6 +2,7 @@
 title: "۱۷۵. «سیر تحول لعاب سلادون». ساناز رنجی. حسین سرپولکی. در گلستان هنر، ش ۱۴ (زمستان ۱۳۸۷)، ص۸۳- ۹۴." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/gTu7.pdf" 
 slug: gTu7 
