--- a/_posts/2018-11-01-kbwp.html
+++ b/_posts/2018-11-01-kbwp.html
@@ -2,6 +2,7 @@
 title: "۱۷۴. «جنبه‌های معماری تیموری در آسیای میانه». رابرت هیلنبرند. ترجمهٔ داود طبایی. در گلستان هنر، ش ۱۴ (زمستان ۱۳۸۷)، ص۶۵- ۸۲." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/kbwp.pdf" 
 slug: kbwp 
