--- a/_posts/2018-10-23-sUwg.html
+++ b/_posts/2018-10-23-sUwg.html
@@ -2,6 +2,7 @@
 title: "۱۷۳. «مدل‌سازی شهرهای سنتی اسلامی». نزار الصّیاد. ترجمهٔ مریم قیومی. در گلستان هنر، ش ۱۴ (زمستان ۱۳۸۷)، ص۵۵- ۶۴." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/sUwg.pdf" 
 slug: sUwg 
