--- a/_posts/2018-10-18-yzdr.html
+++ b/_posts/2018-10-18-yzdr.html
@@ -2,6 +2,7 @@
 title: "۱۷۲. «‌در میانهٔ فردوس و دارالسلطنه: نشانه‌شناسی اصفهان صفوی». هایدی والشر. ترجمهٔ اردشیر اشراقی. در گلستان هنر، ش ۱۴ (زمستان ۱۳۸۷)، ص۴۰- ۵۴." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/yzdr.pdf" 
 slug: yzdr 
