--- a/_posts/2018-10-09-VRVh.html
+++ b/_posts/2018-10-09-VRVh.html
@@ -2,6 +2,7 @@
 title: "۱۷۰. «محوطهٔ تاریخی سَپَرُوی نایین». علمدار حاجی‌محمدعلیان. در گلستان هنر، ش ۱۴ (زمستان ۱۳۸۷)، ص۳۰- ۳۴." 
 authors: asmaneh 
 types: library 
+categories: golestanehonar 
 featured: false
 attachedPDF: "/assets/pdf/VRVh.pdf" 
 slug: VRVh 
