--- a/_posts/2018-01-16-d8dD.html
+++ b/_posts/2018-01-16-d8dD.html
@@ -15,7 +15,7 @@ gallery:
   title: "" 
  
 --- 
-<table style="border-collapse: collapse; width: 100%; border-style: hidden; float: left;" border="1">
+<table style="border-collapse: collapse; width: 100%; border-style: hidden; margin-left: auto; margin-right: auto;" border="3">
 <tbody>
 <tr>
 <td style="width: 48.6728%;"><em style="text-align: justify;">صبح روز ۳۰ دی&zwnj;ماه ۱۳۹۵ در طبقات بالایی ساختمان پلاسکو با جرقه&zwnj;ای نابهنگام، حاصل اتصال در سیم&zwnj;کشی برق در مجاورت یک کپسول نشت&zwnj;کردۀ گاز، آتش&zwnj;سوزی مهیبی آغاز شد. اما واقعاً چه شد که آتش&zwnj;سوزی پلاسکو روی داد؟ به علت جرقۀ نابهنگام و نشت گاز؟ یا به علت اینکه به جز آن کپسول گاز کارگران در زمستان سرد تهران راه دیگری برای گرم کردن محیط کارشان نداشتند؟ یا آنکه کارفرما راه امنی برای گرم کردن آن کارگاه فراهم نکرده بود؟ شاید آتش&zwnj;سوزی&nbsp; اجتناب&zwnj;ناپذیر بود اما مالک ساختمان، بنیاد مستضعفان، بایستی از پیش تمهیداتی برای پیشگیری از گسترش سریع آن در نظر می&zwnj;گرفت؟ نبودن این تمهید نتیجۀ غفلت شهرداری در نظارت بر ایمنی ساختمان بود؟ علت ضعف جایگاه حقوقی شورای شهر نبود که راه را بر پیگرد قانونی غفلت احتمالی شهرداری در انجام وظایفش مسدود کرده است؟ یا مقصر مجلس شورای اسلامی است که با گذشت پنج دوره از تشکیل شورای شهر، هنوز قانون&zwnj;گذاری لازم برای اختیار دادن به شوراها در پیگیری وظایف نظارتی صورت نگرفته است؟ این رشته سر دراز دارد.</em></td>
@@ -23,5 +23,6 @@ gallery:
 </tr>
 </tbody>
 </table>
+<p style="text-align: justify;">&nbsp;</p>
 <p style="text-align: justify;">این&zwnj;ها بخشی از یادداشتی است که مهرماه امسال دربارۀ مسابقۀ معماری &laquo;بازتولید پلاسکو&raquo; در&nbsp;آسمانه&nbsp;منتشر شد. حال با نزدیک شدن سی&zwnj;ام دی&zwnj;ماه، بعضی مسئولان از آغاز احداث بنای جدید ده طبقه هم&zwnj;زمان با سالگرد حادثه می&zwnj;گویند؛ سازمان میراث فرهنگی از تعداد زیاد طبقات بنای جدید در مجاورت بافت تاریخی تهران گله دارد؛ و دربارۀ اجرای &laquo;برنامۀ عملیاتی ایمن&zwnj;سازی ساختمان&zwnj;های ناایمن بلند&zwnj;مرتبه شهر تهران&raquo; که شورای شهر تهران مهرماه امسال تصویب کرد خبری منتشر نشده است.</p>
 <p style="text-align: justify;">در سالگرد حادثۀ پلاسکو آسمانه از صاحب&zwnj;نظرانی در حوزه&zwnj;های مختلف دعوت کرده است تا از گذشته و آیندۀ ساختمان پلاسکو، معنای حادثۀ فرو ریختنش و آنچه از حادثه آموختیم یا نیاموختیم بنویسند. این یادداشت&zwnj;ها طی روزهای آینده به تدریج در کانال تلگرام و وبگاه آسمانه منتشر می&zwnj;شود.</p>
