--- a/_posts/2018-01-16-d8dD.html
+++ b/_posts/2018-01-16-d8dD.html
@@ -7,6 +7,7 @@ tags: نقد معماری,نقد اجتماعی معماری,پلاسکو,ساخ
 sortOrder: 1 
 featured: false
 featureImg: "/assets/img/posts/d8dD.jpg" 
+attachedPDF: "/assets/pdf/d8dD.pdf" 
 slug: d8dD 
 gallery: 
 - image_path: "/assets/img/posts/d8dD.jpg" 
