--- a/_posts/2018-01-17-tznd.html
+++ b/_posts/2018-01-17-tznd.html
@@ -19,13 +19,13 @@ gallery:
  
 --- 
 <p style="text-align: justify;">ساختمان پلاسکو یکی از اولین بناهای مدرن در ایران بود که در زمان خود و حتی سال&zwnj;ها پس از ظهور خود به عنوان نمادی در شهر تهران باقی ماند. علیرغم نقدهایی که به مکان&zwnj;یابی آن در میان بافت تاریخی تهران شده است، این بنا بخشی از تاریخ ما و هویت ما، نه تنها برای شهر تهران که برای دوران تحول کشور ما به سوی مدرنیته بود. اما همۀ این هویت و تاریخ در عرض چند ساعت فروریخت؛ هرچند نابودی هویتی ما از طریق تخریب نشانه&zwnj;ها و نمادهای معمارانۀ ما دهه&zwnj;هاست که توسط متخصصین و کارشناسان همین مرز و بوم آغاز شده و با روندهای سودجویانه به صورتی جدی ادامه داشته و دارد.</p>
-<table style="border-collapse: collapse; width: 100%; border-style: hidden;" border="1">
+<table style="border-collapse: collapse; width: 74.2914%; border-style: hidden; height: 210px;" border="1">
 <tbody>
-<tr>
-<td style="width: 23.6751%;"><img src="https://raw.githubusercontent.com/asmaneh/asmaneh.github.io/master/assets/img/posts/tznd-1.jpeg" alt="" width="312" height="189" /></td>
-<td style="width: 23.6751%;"><img src="https://raw.githubusercontent.com/asmaneh/asmaneh.github.io/master/assets/img/posts/tznd-2.jpg" alt="" width="277" height="192" /></td>
-<td style="width: 23.6751%;"><img src="https://raw.githubusercontent.com/asmaneh/asmaneh.github.io/master/assets/img/posts/tznd-3.jpg" alt="" width="184" height="240" /></td>
-<td style="width: 23.6751%;"><img src="https://raw.githubusercontent.com/asmaneh/asmaneh.github.io/master/assets/img/posts/tznd-4.jpeg" alt="" width="329" height="240" /></td>
+<tr style="height: 245px;">
+<td style="width: 23.6751%; height: 245px;"><img src="https://raw.githubusercontent.com/asmaneh/asmaneh.github.io/master/assets/img/posts/tznd-1.jpeg" alt="" width="305" height="185" /></td>
+<td style="width: 23.6751%; height: 245px;"><img src="https://raw.githubusercontent.com/asmaneh/asmaneh.github.io/master/assets/img/posts/tznd-2.jpg" alt="" width="264" height="183" /></td>
+<td style="width: 23.6751%; height: 245px;"><img src="https://raw.githubusercontent.com/asmaneh/asmaneh.github.io/master/assets/img/posts/tznd-3.jpg" alt="" width="142" height="185" /></td>
+<td style="width: 23.6751%; height: 245px; text-align: right;"><img src="https://raw.githubusercontent.com/asmaneh/asmaneh.github.io/master/assets/img/posts/tznd-4.jpeg" alt="" width="245" height="179" /></td>
 </tr>
 </tbody>
 </table>
