--- a/_posts/2019-12-25-hitc.html
+++ b/_posts/2019-12-25-hitc.html
@@ -1,12 +1,16 @@
 --- 
 title: "دربارۀ پروندۀ «شهر جمهوری اسلامی ایران»" 
 authors: smohseni 
-types: "bulletins" 
-categories: "ircity" 
-sort: 1 
-slug: "hitc" 
+types: bulletins 
+categories: ircity 
+tags: نقد معماری,نقد سیاسی معماری,حسن روحانی,جمهوری اسلامی ایران,طرح اقدام ملی مسکن,وزارت راه و شهرسازی,ریاست جمهوری,ایدئولوژی و معماری 
+sortOrder: 1 
+featured: false
+slug: hitc 
+gallery: 
+- image_path: "/assets/img/posts/hitc-1.png" 
+  title: "" 
+ 
 --- 
-یکی از مباحث درس آداب نوشتن دربارۀ معماری در نیم‌سال جاری انواع نوشته دربارۀ معماری به اعتبار مخاطب و رسانه بود، بعد از این مبحث، به همراه آقای دکتر مهرداد قیومی، مدرس این درس، تمرینی برای دانشجویان ورودی ۹۸ مطالعات معماری ایران دانشگاه شهید بهشتی طراحی کردیم تا نوشتن این انواع را در عمل بیازمایند. آنچه در انتخاب موضوع این تمرین اهمیت داشت این بود که موضوع طوری باشد که صرفاً تاریخی نباشد و افق دید دانشجویان را از حیث گسترۀ موضوعاتی که به معماری و نوشتن از آن مرتبط است بازتر کند. در این تمرین بنا بر این بود که دانشجویان در عمل با این مواجه شوند که تاریخ معماری چطور ممکن است در بالاترین سطوح مدیریتی استفاده یا سوءاستفاده بشود و حتی در کلان‌ترین تصمیم‌گیری‌های کشور نقش ایفا کند. این موضوع بستری شد برای اینکه دانشجویان تمرین کنند چطور می‌شود از موضع متخصص تاریخ معماری به آنچه در اطرافمان می‌گذرد واکنش نشان داد و آن را نقد کرد.
-
-با در نظر گرفتن همۀ اهداف این تمرین، در بیست‌وپنجم آبان ۹۸ بخشی از [ویدئوی سخنرانی رئیس جمهور](https://www.isna.ir/news/98060502606/) در شهریور امسال و در مراسم آغاز عملیات اجرایی طرح اقدام ملی مسکن برای دانشجویان پخش شد و از آنها خواسته شد با توجه به این ویدئو هر کدام نوعی از انواع نوشته را تمرین کنند.
-پرونده‌ای که در ادامه می‌آید نتیجۀ تلاش گروهی مثال‌زدنی دانشجویان ورودی ۹۸ در این تمرین است.
+<p style="text-align: center;"><img src="https://raw.githubusercontent.com/asmaneh/asmaneh.github.io/master/assets/img/posts/hitc-1.png" alt="" width="344" height="465" /></p>
+<p style="text-align: justify;">یکی از مباحث درس آداب نوشتن دربارۀ معماری در نیم&zwnj;سال جاری انواع نوشته دربارۀ معماری به اعتبار مخاطب و رسانه بود، بعد از این مبحث، به همراه آقای دکتر مهرداد قیومی، مدرس این درس، تمرینی برای دانشجویان ورودی ۹۸ مطالعات معماری ایران دانشگاه شهید بهشتی طراحی کردیم تا نوشتن این انواع را در عمل بیازمایند. آنچه در انتخاب موضوع این تمرین اهمیت داشت این بود که موضوع طوری باشد که صرفاً تاریخی نباشد و افق دید دانشجویان را از حیث گسترۀ موضوعاتی که به معماری و نوشتن از آن مرتبط است بازتر کند. در این تمرین بنا بر این بود که دانشجویان در عمل با این مواجه شوند که تاریخ معماری چطور ممکن است در بالاترین سطوح مدیریتی استفاده یا سوءاستفاده بشود و حتی در کلان&zwnj;ترین تصمیم&zwnj;گیری&zwnj;های کشور نقش ایفا کند. این موضوع بستری شد برای اینکه دانشجویان تمرین کنند چطور می&zwnj;شود از موضع متخصص تاریخ معماری به آنچه در اطرافمان می&zwnj;گذرد واکنش نشان داد و آن را نقد کرد. با در نظر گرفتن همۀ اهداف این تمرین، در بیست&zwnj;وپنجم آبان ۹۸ بخشی از [<a href="https://www.isna.ir/news/98060502606/" target="_blank" rel="noopener">ویدئوی سخنرانی رئیس جمهور</a>] در شهریور امسال و در مراسم آغاز عملیات اجرایی طرح اقدام ملی مسکن برای دانشجویان پخش شد و از آنها خواسته شد با توجه به این ویدئو هر کدام نوعی از انواع نوشته را تمرین کنند. پرونده&zwnj;ای که در ادامه می&zwnj;آید نتیجۀ تلاش گروهی مثال&zwnj;زدنی دانشجویان ورودی ۹۸ در این تمرین است.</p>
