--- a/_posts/2019-12-25-pSFV.html
+++ b/_posts/2019-12-25-pSFV.html
@@ -1,24 +1,4 @@
----
-title: "جستار: چند پرسش درباره‌ی یک پیشنهاد"
-authors: محمد علیزاده
-types: "bulletins"
-categories: "ircity"
-sort: 4
-attachedPDF: "/assets/img/posts/pSFV.jpg"
-featureImg: "/assets/img/posts/pSFV.jpg"
-slug: "pSFV"
-gallery:
-- image_path: "/assets/img/posts/pSFV.jpg"
-  title: "جستار: چند پرسش درباره‌ی یک پیشنهاد"
----
-رئیس ‌جمهور در سخنانی پیشنهاد ساختن شهری با نام جمهوری اسلامی ایران را مطرح می‌کند و در توضیح منظور خود اصفهان را شهری یا جایی می‌نامد که با آوردن نام صفویه به ذهن می‌آید و در مقابل یادآور می‌شود در دوران کنونی جایی وجود ندارد که با بردن نام جمهوری اسلامی به ذهن خطور کند. از توضیحات رئیس ‌جمهور اینطور برداشت می‌شود که به دنبال ساختن شهری است که از نظر کالبدی دارای ویژگی‌هایی مشخص و متمایز از دیگر دوره‌های تاریخی-سیاسی باشد و به ‌صورت نماد و نمونه‌ای مطلوب از معماری دوران حاکمیت جمهوری اسلامی باقی بماند. نام بردن از معماری صفویه و قاجاریه نیز نشان می‌دهد منظور او نه شهری آرمانی و دست‌نیافتنی که ساختن کالبدی مشخص و متمایز و البته ماندگار است تا در کنار نمونه‌هایی که ذکر می‌کند معرف معماری جمهوری اسلامی ایران باشد.
-
-معماری در تمام دوران علاوه پاسخ دادن به نیازهای عملکردی، عرصه‌ی به جسمیت درآوردن شکوهِ قدرت، اندیشه، هنر، فرهنگ، و فنّ بانیان خود بوده است. نام بسیاری از شهرها و بناهای دوران‌ گذشته و حال به حکومت‌ها و فرهنگ‌های بانی آنها پیوند خورده است. همانطور که حکومت‌های کهن را با شهرها، کاخ‌ها، پرستشگاه‌ها و آرامگاه‌های باشکوهشان می‌شناسیم، در شهرهای جوامع امروزی نیز شاهد برخی بناهای عمومی هستیم که باهدف جسمیت بخشیدن به اندیشه، فرهنگ، و فنّ آن جامعه بنا می‌شود. به نظر می‌رسد رئیس ‌جمهور نیز با نگاهی مشابه به دنبال ساختن شهری است که برای مردمان حال و آینده نمونه‌ای از معماری و شهرسازی دوران حاکمیت جمهوری اسلامی باشد؛ زیرا که به نظر او نشانه‌ای از آن را در شهرهای کنونی کشور، حتی در حد نمونه‌ای قابل ‌مقایسه با آثار دوران صفویه و قاجاریه، نمی‌توان یافت. آنچه در میان سخنان رئیس ‌جمهور می‌توان متوجه شد گلایه‌ی او از معماری و شهرسازی در چهار دهه‌ی گذشته است که بروزش را  در سیمای آشفته و نابسامان تهران می‌توان دید؛ شهری که پایتخت جمهوری اسلامی ایران است اما احتمالاً نماینده‌ی شایسته‌ای برای این حکومت نیست و طبق پیشنهاد رئیس ‌جمهور باید با ساختن شهری نو تصویری مناسب از معماری جمهوری اسلامی به مردمان حال و آینده عرضه کنیم.
-
-پرسشی که در اینجا مطرح می‌شود این است که آیا ساختن شهری نو که نمادی شایسته برای جمهوری اسلامی باشد امکان‌پذیر است؟ اگر بپذیریم معماری و شهرسازی ما در این چهار دهه وضعیت مطلوبی نداشته است و به علت توسعه‌ی گسترده در بافت شهر تهران و ساختن شهرهای حاشیه‌ای پیرامون آن سیمای این شهرها را آشفته می‌بینیم، چگونه ممکن است ناگهان بتوانیم شهری بسازیم که از مشکلات شهرهای پیشین به دور باشد؟ به‌ بیان ‌دیگر اگر امکان طرح و اجرای شهری که قرار است نماینده‌ی شایسته‌ی معماری جمهوری اسلامی ایران باشد وجود دارد چرا این طرح را برای سامان دادن به وضع موجود شهرهای کشور به کار نمی‌بندیم و اگر تاکنون تهیه‌ی چنین طرحی ممکن نبوده است چگونه می‌توان امید داشت شهر پیشنهادی رئیس ‌جمهور به همان معضلات سابق گرفتار نشود؟
-
-فرض کنیم قرار است با کارشناسی دقیق تمام مشکلات قبلی معماری و شهرسازی کشور شناسایی شود و با آگاهی از این مشکلات به طراحی شهر جمهوری اسلامی بپردازیم. شهری که قرار است در کنار معماری صفویه و قاجاریه، معماری جمهوری اسلامی را نمایندگی کند چگونه باید باشد؟ چه کسانی طرح این شهر را تهیه می‌کنند و چه کسانی این طرح را تایید خواهند کرد؟
-
-همان‌طور که پیش‌تر اشاره کردیم جوامع مردم‌سالار امروزی نیز به ساختن بناهایی دست می‌زنند که صرف‌ نظر از پاسخگویی به نیازهای عملکردی، چون نشانه‌ای شهری نوعی از تفکر معمارانه‌ی عصر حاضر را نیز عرضه کند و بر همین اساس موزه‌ها، مراکز فرهنگی، مراکز ورزشی و بسیاری دیگر از این نوع بناها به بافت شهرها اضافه می‌شود؛ اما ساختن شهری که قرار است یک حاکمیت سیاسی را نمایندگی کند و به همان نام خوانده شود به‌ آسانی ساختن یک بنای شهری نیست؛ ضمن آنکه طبق نظر رئیس‌ جمهور اکثر بناهایی که حکومت در این چهار دهه ساخته است نیز شایسته‌ی انتساب به این دوره نیست.
-
-پرسش دیگر این است که با فرض امکان ساختن چنین شهری وجود آن دقیقاً به چه‌ کار می‌آید؟ آیا صرف هزینه‌ای هنگفت برای ساختن یک شهر فقط به این خاطر که نمونه و تابلویی باشد از نحوه‌ی معماری و ساختن جمهوری اسلامی پذیرفتنی است؟ آیا مردمان حال و آینده بر تمام آنچه در این چند دهه ساخته‌ شده است و در آینده نیز ساخته خواهد شد چشم می‌بندند و قول ما را که فقط این شهر معرف معماری جمهوری اسلامی است می‌پذیرند؟ به نظر می‌رسد چنین پیشنهادی درواقع چشم بستن خود ما بر مسائل و معضلات معماری و شهرسازی کشور است که بسیاری از آنها علتی فراتر از معماری و شهرسازی دارد. یکی از معضلات مهم در روزگار ما توسعه‌ی نامتوازن در کشور است که باعث شده است جمعیت تهران و شهر‌هایی که در حاشیه‌‌ی آن قرار دارد به بیش از ده میلیون نفر برسد و هر ساله به این جمعیت افزوده شود. نتیجه‌ی این توسعه‌ی نامتوازن آشفتگی در کالبد و سیمای پایتخت و مهم‌تر از آن اختلال در عملکرد آن و به خطر افتادن سلامت جسمی و روانی شهروندان آن بوده است؛ در مقابل امکانات ضروری زندگی همچون خدمات درمانی، آموزشی، رفاهی و حتی امکانات اولیه‌ای چون تأمین آب در بسیاری از شهرها و روستاهای کشور مناسب نیست. با وجود این مسائل و معضلات آیا ساختن شهری با نام جمهوری اسلامی منطبق با واقعیات و احوالات امروز کشور است یا فقط قرار است تابلویی باشد خوش‌منظر که تصویری برخلاف آنچه هستیم به دیگران عرضه کند؟
+--- 
+published: false 
+--- 
+  
