--- a/_posts/2019-12-25-pSFV.html
+++ b/_posts/2019-12-25-pSFV.html
@@ -1,4 +1,15 @@
 --- 
-published: false 
+title: "جستار: چند پرسش درباره‌ی یک پیشنهاد" 
+authors: محمد علیزاده 
+types: bulletins 
+categories: ircity 
+tags: نقد معماری,نقد سیاسی معماری,حسن روحانی,جمهوری اسلامی ایران,طرح اقدام ملی مسکن,وزارت راه و شهرسازی,ریاست جمهوری,ایدئولوژی و معماری 
+sortOrder: 4 
+featured: false
+featureImg: "/assets/img/posts/pSFV.jpg" 
+slug: pSFV 
+gallery: 
+- image_path: "/assets/img/posts/pSFV.jpg" 
+  title: "جستار: چند پرسش درباره‌ی یک پیشنهاد" 
+ 
 --- 
-  
