--- a/_posts/2019-12-25-pgxV.html
+++ b/_posts/2019-12-25-pgxV.html
@@ -1,22 +1,11 @@
 --- 
 title: "جستار: پیش از  کالبد" 
 authors: پارسا طی 
-types: "bulletins" 
-categories: "ircity" 
-sort: 5 
-slug: "pgxV" 
+types: bulletins 
+categories: ircity 
+tags: نقد معماری,نقد سیاسی معماری,حسن روحانی,جمهوری اسلامی ایران,طرح اقدام ملی مسکن,وزارت راه و شهرسازی,ریاست جمهوری,ایدئولوژی و معماری 
+sortOrder: 5 
+featured: false
+slug: pgxV 
 --- 
-جمهوری اسلامی ایران در طول حدوداً ۴۰ سال سعی داشته است بر جنبه‌های مختلف آرمانشهر خود جامه‌ی عمل بپوشاند. این جنبش پا‌ی خود را فراتر گذاشته و سعی دارد برای آرمانشهر خود کالبدی در نظر بگیرد؛ اما پیش از این لازم است بازنگری­ای در صورت فعلی جامعه و محیط آن صورت گیرد. در جامعه‌ی امروز ما با قشر‌هایی مواجه می‌شویم که در ایدئولوژی ۵۷ و کالبد آرمانشهر جایی نخواهند داشت. این قشر از جامعه را عاملی خارجی شکل نداده و از جایی دیگر به اینجا وصله نشده است؛ بلکه در همین بستر وجود یافته است. اگر بپذیریم که ظهور و وجود هر چیز بنا بر علت و نیاز شکل می‌گیرد، آنگاه حضور این قشر‌های اجتماعی ناشی از نیازی است که با تعریف‌های مذهبی و اجتماعی پنجاه‌و‌هفتی‌ها در مغایرت است.
-
-چرخ آرمانشهر بر پایه‌ی هماهنگی و کارکرد درست صورت‌های آن است که می‌چرخد. در سیر تحقق آرمانشهر که از ۵۷ تا امروز ادامه دارد، قشر‌های اجتماعی نامتجانس و مغایر شکل گرفته‌اند. معتادان را به عنوان نماینده‌ای از این قشرها برمی‌گزینیم؛ معتاد در وهله‌ی اول در کالبد شهر آرمانی ما جای نخواهد داشت و وجودش حتی در کالبد فعلی شهر هم شایسته نیست. از بین رفتن آنها در عمل ممکن نیست و در صورت فنا، این نابودی مقطعی خواهد بود زیرا بستر جامعه مساعد برای وجود چنین افرادی است. بیمار پنداشتن این قشرها و تلاش برای تیمار آنها کوششی است که جامعه برای تحقق آرمان‌های خود انجام داده است. این کوشش منجر به پدید آمدن فضاهای جدید برای ترک عادت شده ‌است. کمپ‌های ترک اعتیاد، اسکان‌های اورژانسی، گرم‌خانه‌ها و مراکز مشاوره از این قبیل‌اند. همین طرز مواجه‌ي جامعه موجب پدید آمدن چرخی شده است که همواره می‌چرخد و مسیری را نمی‌پیماید؛ زیرا این نوع نگاه موجب شده است که فرد خود را همیشه قابل درمان بپندارد و ترسی از ابتلای دوباره ندارد. ترک عادت دوره‌ای است نه دائمی.
-
-پویایی این قشرهای اجتماعی و تطبیق آنها با شرایط موجبات شگفتی را فراهم می‌آورد. شیوه‌ای از زیست به عنوان «کمپ‌نوردی» در میان معتادان وجود دارد. فرد کمپ‌نورد خود را با برنامه‌های ترک اجباری تطبیق داده و از فضاهای ترک جمعی مانند اردوگاه‌ها و کمپ‌ها به منزله‌ی جای خواب استفاده می‌کند و در واقع زندگی‌ای را با نیم‌نگاهی به برنامه‌ی اصلاحی جامعه برای خود فراهم آورده ‌است. نگرانی‌ها موجب طرح سوالاتی شده است که قبل از یافتن کالبد برای شهر آرمانی نیاز به چاره‌جویی دارد. بخشی از این سوال‌ها به شرح زیر است:
-
-- آیا برنامه‌ی متصور برای اصلاح این قشر کارکردی است؟
-
-- آیا اصلاح و برگشت دوباره‌ی این قشر به جامعه ممکن است؟
-
-- آیا این قشر‌ در آرمانشهر ما جای دارند؟
-
-- و در صورت حضور در آرمانشهر؛ آیا کالبدی خاص را باید برای آنها فراهم آورد؟
-
+<p>جمهوری اسلامی ایران در طول حدوداً ۴۰ سال سعی داشته است بر جنبه&zwnj;های مختلف آرمانشهر خود جامه&zwnj;ی عمل بپوشاند. این جنبش پا&zwnj;ی خود را فراتر گذاشته و سعی دارد برای آرمانشهر خود کالبدی در نظر بگیرد؛ اما پیش از این لازم است بازنگری&shy;ای در صورت فعلی جامعه و محیط آن صورت گیرد. در جامعه&zwnj;ی امروز ما با قشر&zwnj;هایی مواجه می&zwnj;شویم که در ایدئولوژی ۵۷ و کالبد آرمانشهر جایی نخواهند داشت. این قشر از جامعه را عاملی خارجی شکل نداده و از جایی دیگر به اینجا وصله نشده است؛ بلکه در همین بستر وجود یافته است. اگر بپذیریم که ظهور و وجود هر چیز بنا بر علت و نیاز شکل می&zwnj;گیرد، آنگاه حضور این قشر&zwnj;های اجتماعی ناشی از نیازی است که با تعریف&zwnj;های مذهبی و اجتماعی پنجاه&zwnj;و&zwnj;هفتی&zwnj;ها در مغایرت است. چرخ آرمانشهر بر پایه&zwnj;ی هماهنگی و کارکرد درست صورت&zwnj;های آن است که می&zwnj;چرخد. در سیر تحقق آرمانشهر که از ۵۷ تا امروز ادامه دارد، قشر&zwnj;های اجتماعی نامتجانس و مغایر شکل گرفته&zwnj;اند. معتادان را به عنوان نماینده&zwnj;ای از این قشرها برمی&zwnj;گزینیم؛ معتاد در وهله&zwnj;ی اول در کالبد شهر آرمانی ما جای نخواهد داشت و وجودش حتی در کالبد فعلی شهر هم شایسته نیست. از بین رفتن آنها در عمل ممکن نیست و در صورت فنا، این نابودی مقطعی خواهد بود زیرا بستر جامعه مساعد برای وجود چنین افرادی است. بیمار پنداشتن این قشرها و تلاش برای تیمار آنها کوششی است که جامعه برای تحقق آرمان&zwnj;های خود انجام داده است. این کوشش منجر به پدید آمدن فضاهای جدید برای ترک عادت شده &zwnj;است. کمپ&zwnj;های ترک اعتیاد، اسکان&zwnj;های اورژانسی، گرم&zwnj;خانه&zwnj;ها و مراکز مشاوره از این قبیل&zwnj;اند. همین طرز مواجه&zwnj;ي جامعه موجب پدید آمدن چرخی شده است که همواره می&zwnj;چرخد و مسیری را نمی&zwnj;پیماید؛ زیرا این نوع نگاه موجب شده است که فرد خود را همیشه قابل درمان بپندارد و ترسی از ابتلای دوباره ندارد. ترک عادت دوره&zwnj;ای است نه دائمی. پویایی این قشرهای اجتماعی و تطبیق آنها با شرایط موجبات شگفتی را فراهم می&zwnj;آورد. شیوه&zwnj;ای از زیست به عنوان &laquo;کمپ&zwnj;نوردی&raquo; در میان معتادان وجود دارد. فرد کمپ&zwnj;نورد خود را با برنامه&zwnj;های ترک اجباری تطبیق داده و از فضاهای ترک جمعی مانند اردوگاه&zwnj;ها و کمپ&zwnj;ها به منزله&zwnj;ی جای خواب استفاده می&zwnj;کند و در واقع زندگی&zwnj;ای را با نیم&zwnj;نگاهی به برنامه&zwnj;ی اصلاحی جامعه برای خود فراهم آورده &zwnj;است. نگرانی&zwnj;ها موجب طرح سوالاتی شده است که قبل از یافتن کالبد برای شهر آرمانی نیاز به چاره&zwnj;جویی دارد. بخشی از این سوال&zwnj;ها به شرح زیر است: - آیا برنامه&zwnj;ی متصور برای اصلاح این قشر کارکردی است؟ - آیا اصلاح و برگشت دوباره&zwnj;ی این قشر به جامعه ممکن است؟ - آیا این قشر&zwnj; در آرمانشهر ما جای دارند؟ - و در صورت حضور در آرمانشهر؛ آیا کالبدی خاص را باید برای آنها فراهم آورد؟</p>
