--- a/_posts/2020-12-17-jCY5.html
+++ b/_posts/2020-12-17-jCY5.html
@@ -21,5 +21,6 @@ gallery:
 <p style="text-align: justify;">مجموعۀ حاضر که به همّت دوستان و همکاران دکتر فرهاد نظری تدوین شده است، شامل یادداشت&zwnj;هایی &laquo;در منقبت&raquo; ایشان، جستارهایی در حوزه&zwnj;های علاقه و کارشان و مروری فهرست&zwnj;وار بر فعالیت&zwnj;های علمی و اجرایی&zwnj;شان است.</p>
 <p style="text-align: justify;">امیدواریم این مجموعه مدخلی بر شناخت ایشان قرار بگیرد و موجب شود به&zwnj;طرزی شایسته&nbsp; قدر و ارج ایشان را بدانیم.</p>
 <p style="text-align: left;">تحریریۀ آسمانه</p>
-<p style="text-align: center;"><img src="https://raw.githubusercontent.com/asmaneh/asmaneh.github.io/master/assets/img/posts/jCY5-1.jpg" alt="" width="487" height="690" /></p>
+<p style="text-align: center;">&nbsp;</p>
 <p style="text-align: center;">پروندۀ پی&zwnj;دی&zwnj;اف این مجموعه را از <a href="https://raw.githubusercontent.com/asmaneh/asmaneh.github.io/master/assets/pdf/jCY5.pdf" target="_blank" rel="noopener">اینجا</a> دریافت کنید.</p>
+<p style="text-align: center;"><img src="https://raw.githubusercontent.com/asmaneh/asmaneh.github.io/master/assets/img/posts/jCY5-1.jpg" alt="" width="524" height="741" /></p>
