--- a/_posts/2021-10-03-GZhn.html
+++ b/_posts/2021-10-03-GZhn.html
@@ -1,5 +1,5 @@
 --- 
-title: "" 
+title: "نوشتۀ اول کاربر آزمایشی" 
 authors: test_120 
 types: blog 
 tags: معماری صفوی,اصفهان,شاه‌عباس,آیینه‌خانه 
