--- a/_posts/2020-12-17-jCY5.html
+++ b/_posts/2020-12-17-jCY5.html
@@ -1,5 +1,5 @@
 --- 
-title: "پیشگفتار" 
+title: "ارج‌نامۀ فرهاد نظری؛ پیشگفتار" 
 authors: asmaneh 
 types: bulletins 
 categories: nazari 
@@ -11,7 +11,7 @@ attachedPDF: "/assets/pdf/jCY5.pdf"
 slug: jCY5 
 gallery: 
 - image_path: "/assets/img/posts/jCY5.JPG" 
-  title: "پیشگفتار" 
+  title: "ارج‌نامۀ فرهاد نظری؛ پیشگفتار" 
 - image_path: "/assets/img/posts/jCY5-1.jpg" 
   title: "" 
  
