--- a/_posts/2020-12-17-qgs4.html
+++ b/_posts/2020-12-17-qgs4.html
@@ -1,5 +1,5 @@
 --- 
-title: "پیشگفتار" 
+title: "ارج‌نامۀ هادی ندیمی؛ پیشگفتار" 
 authors: asmaneh 
 types: bulletins 
 categories: nadimi 
@@ -10,7 +10,7 @@ featureImg: "/assets/img/posts/qgs4.jpg"
 slug: qgs4 
 gallery: 
 - image_path: "/assets/img/posts/qgs4.jpg" 
-  title: "پیشگفتار" 
+  title: "ارج‌نامۀ هادی ندیمی؛ پیشگفتار" 
 - image_path: "/assets/img/posts/qgs4-1.jpg" 
   title: "" 
 - image_path: "/assets/img/posts/qgs4-2.jpg" 
