update pdf link

--- a/_posts/2020-12-17-qgs4.html
+++ b/_posts/2020-12-17-qgs4.html
@@ -1,22 +1,23 @@
---- 
-title: "ارج‌نامۀ هادی ندیمی؛ پیشگفتار" 
-authors: asmaneh 
-types: bulletins 
-categories: nadimi 
-tags: هادی ندیمی 
-sortOrder: 1 
+---
+title: "ارج‌نامۀ هادی ندیمی؛ پیشگفتار"
+authors: asmaneh
+types: bulletins
+categories: nadimi
+tags: هادی ندیمی
+sortOrder: 1
 featured: false
-featureImg: "/assets/img/posts/qgs4.jpg" 
-slug: qgs4 
-gallery: 
-- image_path: "/assets/img/posts/qgs4.jpg" 
-  title: "ارج‌نامۀ هادی ندیمی؛ پیشگفتار" 
-- image_path: "/assets/img/posts/qgs4-1.jpg" 
-  title: "" 
-- image_path: "/assets/img/posts/qgs4-2.jpg" 
-  title: "" 
- 
---- 
+attachedPDF: "/assets/pdf/arjnameh-nadimi.pdf"
+featureImg: "/assets/img/posts/qgs4.jpg"
+slug: qgs4
+gallery:
+- image_path: "/assets/img/posts/qgs4.jpg"
+  title: "ارج‌نامۀ هادی ندیمی؛ پیشگفتار"
+- image_path: "/assets/img/posts/qgs4-1.jpg"
+  title: ""
+- image_path: "/assets/img/posts/qgs4-2.jpg"
+  title: ""
+
+---
 <p style="text-align: center;">&nbsp;</p>
 <p style="text-align: justify;">دکتر هادی ندیمی بیش از چهل سال با آموزش و پژوهش مسیر آبادی و آبادانی ایران را پیموده است.&nbsp;</p>
 <p style="text-align: justify;">قدردانی از ایشان و ارج نهادن بر فعالیت&zwnj;های دانشورانه و معلمانه&zwnj;شان البته بایست بسیار پیش از این صورت می&zwnj;گرفت.&nbsp; امسال، به رسم خود ایشان هفتۀ پژوهش را فرصتی دیدیم تا این بار از خودشان در مقام پژوهشگر و استادی بسیار اثرگذار در حوزۀ معماری در دهه&zwnj;های اخیر در ایران قدردانی کنیم و در فرصت کوتاهی که داشتیم به همت تعدادی از دوستان، دانشجویان و همکارانشان مجموعۀ حاضر را تدوین کردیم.</p>
