--- a/_posts/2021-09-16-5kHY.html
+++ b/_posts/2021-09-16-5kHY.html
@@ -10,6 +10,7 @@ gallery:
 - image_path: "/assets/img/posts/5kHY.jpg" 
   title: "جلسۀ دفاع از رسالۀ دکتری معماری: «معماری کاخ گلستان در عصر ناصری به مثابۀ آیینۀ تحول ذوق»| حمیدرضا پیشوایی" 
  
+excerpt: هدف پژوهش حاضر تحلیل و تفسیر دگرگونی‌های معماری کاخ گلستان در عصر ناصری به مثابۀ آیینه‌ای از پسندها و مطلوب‌های معماریانۀ این اشخاص است. برای نیل به این هدف، با استفاده از راهبرد تاریخی و بهره‌گیری از منابع مادی، تصویری و نوشتاری، در گام نخست اجزا و بناهای کاخ گلستان یکایک تاریخ‌گذاری، موقعیت‌یابی و توصیف شده و در گام بعد تطورات تاریخی این مجموعه، بر مبنای سلیقۀ معماریانۀ اشخاص، تفسیر و تعلیل شده است. 
 --- 
 <p>استادان راهنما: دکتر زهرا اهری، دکتر مهرداد قیومی بیدهندی</p>
 <p>استادان مشاور: دکتر داریوش رحمانیان، دکتر امیر مازیار</p>
