--- a/_posts/2021-09-11-Q4QA.html
+++ b/_posts/2021-09-11-Q4QA.html
@@ -6,17 +6,16 @@ tags: معرق,سده‌ٔ هجدهم
 featured: false
 slug: Q4QA 
 --- 
-<p>📢برگزاری کارگاه: &laquo;جایگاه مرقع&zwnj;های ایرانی-هندی سدۀ هجدهم&raquo;</p>
-<p>🔸میزبان: موزۀ هنر آسیا و موزۀ هنر اسلامی برلین</p>
-<p>🔸زمان: ۱۵ تا ۱۷ سپتامبر ۲۰۲۱|۲۴ تا ۲۶ شهریور ۱۴۰۰</p>
+<p>برگزاری کارگاه: &laquo;جایگاه مرقع&zwnj;های ایرانی-هندی سدۀ هجدهم&raquo;</p>
+<p>میزبان: موزۀ هنر آسیا و موزۀ هنر اسلامی برلین</p>
+<p>زمان: ۱۵ تا ۱۷ سپتامبر ۲۰۲۱|۲۴ تا ۲۶ شهریور ۱۴۰۰</p>
 <p>&nbsp;</p>
 <p>▪️Workshop on the Role of Eighteenth-Century Indo-Persianate Albums</p>
 <p>The workshop will address the role of Indo-Persianate albums (muraqqaʿs) that were assembled for or collected by the Mughal governors of Awadh (Uttar Pradesh), Shujaʿ al-Daula (reigned 1754&ndash;1775) and his successor, Asaf al-Daula (reigned 1775-1797), as well as other local elites in Bengal and Bihar. Europeans also participated in the creation and consumption of albums, as patrons and collectors. In 1882, the Prussian State acquired a group of twenty albums from the twelfth Duke of Hamilton; so far, these artworks have received little study.</p>
 <p>&nbsp;</p>
 <p>Eight of them belonged to the Scottish surgeon and interpreter Archibald Swinton (1731&ndash;1804) and ten to the Franco-Swiss engineer and architect Antoine Louis Henri Polier (1741&ndash;1795) &ndash; both were British East India Company officers deeply acquainted with Indo-Persian aristocratic culture. Many more albums are linked to well-known European figures, such as the Governor-General of Bengal Warren Hastings (1732&ndash;1818) and the French Company officer (and special agent to Shujaʿ al-Daula in Faizabad) Jean-Baptiste-Joseph Gentil (1726&ndash;1799). Numerous interrelated questions arise from the study of this material, concerning audiences, artists, patrons, collectors and their wish to produce and preserve knowledge; these questions are to be discussed in this workshop.</p>
 <p>&nbsp;</p>
-<p>🔸 برای اطلاعات و ثبت&zwnj;نام بیشتر به پیوند زیر مراجعه کنید:</p>
+<p>برای اطلاعات و ثبت&zwnj;نام بیشتر به پیوند زیر مراجعه کنید:</p>
 <p>https://www.smb.museum/en/whats-new/detail/workshop-on-the-role-of-eighteenth-century-indo-persianate-albums-from-15-to-17-september-2021/</p>
 <p>&nbsp;</p>
-<p>#خبر&nbsp;</p>
-<p>@asmaaneh</p>
+<p>&nbsp;</p>
