--- a/_posts/2021-08-30-8zFA.html
+++ b/_posts/2021-08-30-8zFA.html
@@ -1,34 +1,4 @@
 --- 
-title: "سخنرانی‌های برنامۀ بنیاد آقاخان برای هنر و معماری اسلامی در دانشگاه هاروارد در پاییز ۲۰۲۱ " 
-authors: asmaneh 
-types: news 
-tags: آقاخان,هاروارد 
-featured: false
-slug: 8zFA 
-gallery: 
-- image_path: "/assets/img/posts/8zFA-1.jpg" 
-  title: "" 
- 
+published: false 
 --- 
-<p>📢سخنرانی&zwnj;های برنامۀ بنیاد آقاخان برای هنر و معماری اسلامی در دانشگاه هاروارد در پاییز ۲۰۲۱&nbsp;</p>
-<p>&nbsp;</p>
-<p>▪️سخنرانی نخست: &laquo;چشمانش از گوشۀ چشمانش آگاه بود: تأملی بر نگاهِ خیره (Gaze) در نقاشی اموی&raquo;</p>
-<p>سخنران: نادیا علی</p>
-<p>زمان: ۲۳ سپتامبر ۲۰۲۱|۱ مهر ۱۴۰۰</p>
-<p>نشانی ثبت&zwnj;نام در جلسه:</p>
-<p>https://harvard.zoom.us/webinar/register/WN_FlZE45GbSRCfj0g6WlZjlA</p>
-<p>&nbsp;</p>
-<p>سخنرانی دوم: &laquo;شاه&zwnj;جهان&zwnj;آباد: شهر شاه&zwnj;جهان آنچنان که در&nbsp; پادشاه&zwnj;نامه وصف شده است&raquo;</p>
-<p>سخنران: گل&zwnj;فشان&zwnj; خان</p>
-<p>زمان: ۴ نوامبر ۲۰۲۱|۱۳ آبان&nbsp; ۱۴۰۰</p>
-<p>نشانی ثبت&zwnj;نام در جلسه:</p>
-<p>https://harvard.zoom.us/webinar/register/WN_-Qc2GzQtR6Gyzg3ojdbpyA</p>
-<p>&nbsp;</p>
-<p>▪️سخنرانی سوم: &laquo;ساختن خلافت: آبادانی و ویرانی و&nbsp; هویت فرقه&zwnj;ای در معماری متقدم فاطمیان&raquo;</p>
-<p>سخنران: جنیفر پروییت</p>
-<p>زمان: ۱۸ نوامبر ۲۰۲۱|۲۷ آبان&nbsp; ۱۴۰۰</p>
-<p>نشانی ثبت&zwnj;نام در جلسه:</p>
-<p>https://harvard.zoom.us/webinar/register/WN_xyP44tJaTVOyWTM3idDAtA</p>
-<p>&nbsp;</p>
-<p>اطلاعات بیشتر:</p>
-<p>https://agakhan.fas.harvard.edu/news-events</p>
+  
