--- a/_posts/2021-09-17-bG2P.html
+++ b/_posts/2021-09-17-bG2P.html
@@ -1,15 +1,4 @@
 --- 
-title: "درگذشت هرمز فرهت، آهنگساز و پژوهشگر موسیقی" 
-authors: asmaneh 
-types: news 
-featured: false
-slug: bG2P 
-gallery: 
-- image_path: "/assets/img/posts/bG2P-1.jpg" 
-  title: "" 
- 
+published: false 
 --- 
-<p>◼️هرمز فرهت، آهنگساز و پژوهشگر موسیقی، امروز درگذشت.&nbsp;</p>
-<p>فرهت در دوران تحصیل دورۀ دکتری در ایالات متحده به ایران آمد و نزد حسین صبا و نصرالله زرین&zwnj;پنجه با موسیقی ایرانی آشنا شد. پایان&zwnj;نامۀ دکتری او با عنوان &laquo;دستگاه در موسیقی ایرانی&raquo; را نشر پارت با ترجمۀ مهدی پورمحمد منتشر کرده است.&nbsp;</p>
-<p>فرهت آهنگساز تعدادی از مهم&zwnj;ترین فیلم&zwnj;های سینمای ایران چون گاو، اثر داریوش مهرجویی، جنوب شهر، اثر فرخ عفاری، و آرامش در حضور دیگران، اثر ناصر تقوایی بود. به جز این، آلبوم&zwnj;های موسیقی دیگری چون &laquo;کوارتت ۱، ۲ و ۳&raquo; از او منتشر شده است.</p>
-<p>یادش گرامی باد.</p>
+  
