--- a/_posts/2021-09-21-YeEa.html
+++ b/_posts/2021-09-21-YeEa.html
@@ -1,26 +1,4 @@
 --- 
-title: "برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی|شیوۀ هم‌نشینی خانه‌ها در روستای کوخرد، بستک" 
-authors: asmaneh 
-types: news 
-tags: دفاع,کارشناسی ارشد,مطالعات معماری,سعید جوقه سالار 
-featured: false
-slug: YeEa 
-gallery: 
-- image_path: "/assets/img/posts/YeEa-1.jpg" 
-  title: "" 
- 
-excerpt: برگزاری جلسۀ دفاع از پایان‌نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی
-شیوۀ هم‌نشینی خانه‌ها در روستای کوخرد، بستک| سعیده جوقه‌سالار
-استاد راهنما: دکتر محمد غلامعلی فلاح
-داوران: دکتر زهره تفضلی، دکتر مهنام نجفی
-زمان: چهارشنبه ۳۱ شهریور ۱۴۰۰، ساعت ۱۰ 
+published: false 
 --- 
-<p>برگزاری جلسۀ دفاع از پایان&zwnj;نامۀ کارشناسی ارشد مطالعات معماری ایران، دانشکدۀ معماری و شهرسازی دانشگاه شهید بهشتی</p>
-<p>شیوۀ هم&zwnj;نشینی خانه&zwnj;ها در روستای کوخرد، بستک| سعیده جوقه&zwnj;سالار</p>
-<p>استاد راهنما: دکتر محمد غلامعلی فلاح</p>
-<p>داوران: دکتر زهره تفضلی، دکتر مهنام نجفی</p>
-<p>زمان: چهارشنبه ۳۱ شهریور ۱۴۰۰، ساعت ۱۰</p>
-<p>&nbsp;</p>
-<p>روستای کوخرد از قدیم&zwnj;ترین روستاهای شهرستان بستک در استان هرمزگان است. خانه&zwnj;های این روستا، که در ابتدا در بافتی متراکم و فشرده استقرار یافته بودند، به تدریج و با گسترش روستا از یکدیگر فاصله گرفتند و صورتی پراکنده به بافت مسکونی روستا بخشیدند که با هستۀ اولیۀ آن تفاوت دارد. در این تحقیق این پرسش را مطرح کرده&zwnj;ایم که در دوره&zwnj;های مختلف تاریخ روستا خانه&zwnj;ها چه شیوه&zwnj;هایی از هم&zwnj;نشینی را برگزیدند و چه عواملی موجب تفاوت در کیفیت هم&zwnj;نشینی آنها شده است؟</p>
-<p>برای پاسخ به این پرسش با بهره&zwnj;گیری از راهبرد توصیف و طبقه&zwnj;بندی و با مطالعۀ میدانی کوخرد و مصاحبه با ساکنان روستا کیفیت&zwnj;های مختلف هم&zwnj;نشینی خانه&zwnj;های کوخرد، از زمان شکل&zwnj;گیری روستا تا سال ۱۳۴۶، شناسایی و عوامل موثر بر آن معرفی شد. در فصل نخست پایان&zwnj;نامه بیان شده است که هم&zwnj;نشینی خانه&zwnj;ها به چه معناست؛ فصل دوم به روستای کوخرد و بستر طبیعی و بافت مسکونی آن پرداخته است؛ در فصل سوم نیز تاریخ این روستا بر مبنای کیفیت هم&zwnj;نشینی خانه&zwnj;های آن به سه برهه تقسیم و روایتی از شکل&zwnj;گیری و گسترش روستا عرضه شده است؛ روایتی که بیان می&zwnj;کند در هر دوره کیفیت هم&zwnj;نشینی خانه&zwnj;های روستا چگونه بوده است و چه عواملی بر آن اثر کرده&zwnj;اند.&nbsp;</p>
-<p>در برهۀ اول خانه&zwnj;ها با فشردگی و انسجام زیاد کنار یکدیگر نشستند و هستۀ مسکونی متراکمی را شکل دادند؛ در برهۀ دوم میل به پراکندگی بیشتر در میان قطعات مسکونی ظاهر شد و در برهۀ سوم خانه&zwnj;ها آشکارا از یکدیگر فاصله گرفتند و از تراکم بافت مسکونی روستا کاستند. مهم&zwnj;ترین عواملی نیز که در هر دوره بر کیفیت هم&zwnj;نشینی این خانه&zwnj;ها اثر گذاشته&zwnj; چهار تاست: توپوگرافی زمین؛ وقوع سیلاب&zwnj;ها؛ امنیت؛ و روابط خویشاوندی. این عوامل چهارگانه در هر دوره به صورتی در طرز کنار هم نشستن خانه&zwnj;ها موثر بوده&zwnj;اند؛ گاه در جهت تراکم بیشتر خانه&zwnj;ها و گاه در جهت پراکنده ساختن آنها.</p>
+  
